--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ author: Valentin Pomirleanu
 email: valentin.pomirleanu @ gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Lorem Ipsum
+theme: minima
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
